--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Prepare site
         run: |
           mkdir -p site/data
-          cp index.html run.html styles.css app.js results.js site/
+          cp index.html run.html settings.html styles.css app.js results.js settings.js nav.js site/
           if [ -d data ]; then
             cp -a data/. site/data/
           fi
